# VIC-SIM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.html  run.sh
.github/workflows/: ci.yml
headers/: CMakeLists.txt  sim_const.h  sim_ipc.h  sim_log.h  sim_params.h  sim_types.h  sim_ui.h
src/: CMakeLists.txt  bb_server.c  drone.c  input.c  master.c  obstacles.c  sim_ipc.c  sim_log.c  sim_params.c  sim_ui.c  targets.c
